@@ -5,7 +5,7 @@
 	<string name="title_section3">Contador de</string>
 
 	<string name="app_name">Contador de Mensajes</string>
-	<string name="app_version">versión 2.3.24 (October 2014)</string>
+	<string name="app_version">versión 3.0.0 (December 2014)</string>
 	<string name="app_desc">Contador de mensajes muestra los mensajes de la bandeja de entrada de estadísticas y el número de mensajes de cada uno de sus contactos. Código fuente de este proyecto está disponible en GitHub. Traducciones utilizando Google Translate.</string>
 	<string name="app_disclaim">negante: Está creado esta aplicación para los propósitos educativos y, como tal, no tiene ninguna garantía o soporte. Dado que se utilizan las API de Android indocumentados, esta aplicación puede no funcionar como se espera en todos los dispositivos.</string>
 	<string name="app_source_code">This project\'s source code is available at GitHub</string>
