@@ -191,3 +191,5 @@ MessageCounter 2.1.20 [December 2013]
  MessageCounter 3.0.0 [November 2014] - Talisman (Material Design)
   - Redesign Counter fragment 
   - Use CardView
+  - Removed Chart Fragment as it is a bit buggy
+  - Use Toolbar on applicable screens
